# llm-architectures

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
llm_architectures/: __init__.py
llm_architectures/benchmarks/: __init__.py
llm_architectures/inference/: __init__.py
llm_architectures/models/: __init__.py  utils.py
llm_architectures/models/gemma3/: args.py  model.py  state_dict_adapter.py
llm_architectures/modules/: __init__.py
scripts/: check_correctness.py  download_models.py  verify_implementation.py
