[project]
name = "learn-llm-architectures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "black>=25.9.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
    "pre-commit>=4.3.0",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["llm_architectures"]


[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501"]
exclude = [".git", "__pycache__", ".venv"]
